bug squashing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,9 +224,13 @@ p {
 
 .popup {
 	position:absolute;	
-	background-color: grey;
 	left: 33%;
 	z-index: 1500;
+	background-color: #F6F6F6;
+	border: 1px solid #D3D3D3;
+	padding: 10px;
+	width: 33%;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
 .popup p {
@@ -262,11 +266,6 @@ p {
 }
 
 .popup {
-	background-color: #F6F6F6;
-	border: 1px solid #D3D3D3;
-	padding: 10px;
-	width: 500px;
-	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 
 }
 
